Begins address scrolling issue on IOS

--- a/client/main.less
+++ b/client/main.less
@@ -13,7 +13,7 @@
 
 html, body, #app {
 	width: 100%;
-	min-height: 100vh;
+	min-height: 100%;
 	background-color: #000;
 }
 
